# traffic-rl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  project.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: experiments.md  leaderboard.md  map.md  vision.md
docs/decisions/: 0001-phase0-stack.md  0002-metrics-and-realism-constraints.md  0003-permanent-docs.md  0004-rl-env-and-reward.md  0005-sensing-noise.md
docs/plans/: phase-1.md  phase-2-runbook.md  phase-2.md  phase-3-batching.md  phase-3-deep-plan-spec.md  phase-3.md  phase-4.md  phase-5.md  phases-2-5-draft.md  phases-3-5-draft.md  phases-4-5-draft.md
docs/research/: sensor-noise-calibration-2026-07.md  sim-architecture-notes-2026-07.md
docs/results/: phase-1.md  phase-2.md  phase-3.md
docs/state/: log.md  miss-log.md  now.md  roadmap.md  watchout-later.md
scenarios/: corridor-balanced.yaml  corridor-rush-wb.yaml  corridor-rush.yaml  grid-balanced.yaml  grid-rush-diag.yaml  single-balanced.yaml  single-night.yaml  single-rush-ns.yaml
src/traffic_rl/: __init__.py  cli.py
tests/: test_smoke.py
tests/control/: factory.py  test_actuated.py  test_coordinated.py  test_fixed_time.py  test_max_pressure.py  test_observation.py  test_observation_noisy.py  test_webster.py
tests/core/: harness.py  test_arrays.py  test_config.py  test_demand.py  test_determinism.py  test_metrics.py  test_multi_intersection.py  test_pedestrians.py  test_recorder.py  test_rng.py  test_sensors.py  test_signals.py  test_timing.py  test_topology.py  test_uid.py  test_units.py  (+2 more)
(+91 files in other folders)
