[project]
name = "traffic-rl"
version = "0.1.0"
description = "Traffic-signal scheduling from classical control to multi-agent RL: custom 2D simulator, honest baselines, fairness-aware metrics."
readme = "README.md"
authors = [
    { name = "Stepan Karapetiani", email = "stpnkarapetyan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pygame-ce>=2.5.7",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
traffic-rl = "traffic_rl.cli:app"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]
local = [
    "init-configurator",
]

[tool.uv]
# "local" holds machine-local tooling (editable initc from the sibling checkout);
# CI syncs with --no-group local because that checkout does not exist there.
default-groups = ["dev", "local"]

[tool.uv.sources]
init-configurator = { path = "../init-configurator", editable = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# target-version deliberately omitted: ruff infers it from requires-python.
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]

[tool.mypy]
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
